--- a/backend/package.json
+++ b/backend/package.json
@@ -14,5 +14,8 @@
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "firebase": "^9.14.0"
   }
 }
