--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node-telegram-bot-api": "^0.57.6",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   },
   "dependencies": {
-    "firebase": "^9.14.0"
+    "firebase": "^9.14.0",
+    "node-telegram-bot-api": "^0.60.0"
   }
 }
