--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "@types/node-telegram-bot-api": "^0.57.6",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "firebase": "^9.14.0",
     "node-telegram-bot-api": "^0.60.0"
   }
