--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^9.14.0",
+    "firebase-admin": "^11.3.0",
     "node-telegram-bot-api": "^0.60.0"
   }
 }
